@@ -2,25 +2,24 @@ package com.smart.system.service.auth.impl;
 
 import cn.hutool.core.util.ZipUtil;
 import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
-import com.google.common.collect.ImmutableList;
 import com.smart.commons.core.exception.BaseException;
 import com.smart.commons.core.exception.BusinessException;
 import com.smart.crud.constants.CrudCommonEnum;
 import com.smart.crud.query.PageSortQuery;
 import com.smart.crud.service.BaseServiceImpl;
-import com.smart.file.core.parameter.FileSaveParameter;
-import com.smart.file.core.pojo.bo.FileDownloadResult;
-import com.smart.file.core.pojo.bo.FileHandlerResult;
-import com.smart.file.core.service.FileService;
-import com.smart.system.constants.SysParameterCodeEnum;
+import com.smart.module.api.file.SmartFileApi;
+import com.smart.module.api.file.SmartFileStorageApi;
+import com.smart.module.api.file.bo.FileDownloadResult;
+import com.smart.module.api.file.bo.FileHandlerResult;
+import com.smart.module.api.file.dto.RemoteFileSaveParameter;
+import com.smart.module.api.file.dto.SmartFileStorageListDTO;
+import com.smart.module.api.system.constants.SysParameterCodeEnum;
 import com.smart.system.mapper.auth.SmartAuthSecretKeyMapper;
 import com.smart.system.model.auth.SmartAuthSecretKeyPO;
-import com.smart.system.model.file.SmartFileStoragePO;
 import com.smart.system.pojo.dto.auth.SmartAuthSecretKeyUploadUpdateDTO;
 import com.smart.system.pojo.vo.auth.SmartAuthSecretKeyListVO;
 import com.smart.system.service.SysParameterService;
 import com.smart.system.service.auth.SmartAuthSecretKeyService;
-import com.smart.system.service.file.SmartFileStorageService;
 import org.springframework.beans.BeanUtils;
 import org.springframework.lang.NonNull;
 import org.springframework.stereotype.Service;
@@ -35,6 +34,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 
 /**
@@ -45,16 +45,16 @@ import java.util.stream.Collectors;
 @Service
 public class SmartAuthSecretKeyServiceImpl extends BaseServiceImpl<SmartAuthSecretKeyMapper, SmartAuthSecretKeyPO> implements SmartAuthSecretKeyService {
 
-    private final FileService fileService;
+    private final SmartFileApi smartFileApi;
 
-    private final SmartFileStorageService smartFileStorageService;
+    private final SmartFileStorageApi smartFileStorageApi;
 
     private final SysParameterService sysParameterService;
 
-    public SmartAuthSecretKeyServiceImpl(FileService fileService, SmartFileStorageService smartFileStorageService, SysParameterService sysParameterService) {
-        this.fileService = fileService;
-        this.smartFileStorageService = smartFileStorageService;
+    public SmartAuthSecretKeyServiceImpl(SmartFileApi smartFileApi, SysParameterService sysParameterService, SmartFileStorageApi smartFileStorageApi) {
+        this.smartFileApi = smartFileApi;
         this.sysParameterService = sysParameterService;
+        this.smartFileStorageApi = smartFileStorageApi;
     }
 
     @Override
@@ -66,15 +66,15 @@ public class SmartAuthSecretKeyServiceImpl extends BaseServiceImpl<SmartAuthSecr
         if (Boolean.TRUE.equals(parameter.getParameter().get(CrudCommonEnum.WITH_ALL.name()))) {
             Set<Long> fileStorageIds = list.stream().map(SmartAuthSecretKeyPO::getFileStorageId).collect(Collectors.toSet());
             if (!CollectionUtils.isEmpty(fileStorageIds)) {
-                Map<Long, SmartFileStoragePO> fileStorageMap = this.smartFileStorageService.listByIds(fileStorageIds).stream()
-                        .collect(Collectors.toMap(SmartFileStoragePO::getId, item -> item));
+                Map<Long, SmartFileStorageListDTO> fileStorageMap = this.smartFileStorageApi.listByIds(fileStorageIds).stream()
+                        .collect(Collectors.toMap(SmartFileStorageListDTO::getId, item -> item));
                 return list.stream()
                         .map(item -> {
                             SmartAuthSecretKeyListVO vo = new SmartAuthSecretKeyListVO();
                             BeanUtils.copyProperties(item, vo);
                             vo.setFileStorage(fileStorageMap.get(item.getFileStorageId()));
                             return vo;
-                        }).collect(Collectors.toList());
+                        }).toList();
             }
         }
         return list;
@@ -90,11 +90,11 @@ public class SmartAuthSecretKeyServiceImpl extends BaseServiceImpl<SmartAuthSecr
                 new QueryWrapper<SmartAuthSecretKeyPO>().lambda()
                         .select(SmartAuthSecretKeyPO::getPublicKeyFileId, SmartAuthSecretKeyPO::getPrivateKeyFileId)
                         .in(SmartAuthSecretKeyPO::getId, list)
-        ).stream().flatMap(item -> ImmutableList.of(item.getPublicKeyFileId(), item.getPrivateKeyFileId()).stream()).collect(Collectors.toSet());
+        ).stream().flatMap(item -> Stream.of(item.getPublicKeyFileId(), item.getPrivateKeyFileId())).collect(Collectors.toSet());
         boolean result = super.removeBatchByIds(list);
         // 删除对应的文件信息
         if (!CollectionUtils.isEmpty(fileIdList)) {
-            this.fileService.batchDelete(fileIdList);
+            this.smartFileApi.batchDelete(fileIdList);
         }
         return result;
     }
@@ -111,16 +111,16 @@ public class SmartAuthSecretKeyServiceImpl extends BaseServiceImpl<SmartAuthSecr
         FileHandlerResult publicKeySaveResult = null;
         FileHandlerResult privateKeySaveResult = null;
         try {
-            publicKeySaveResult = this.fileService.save(
-                    parameter.getPublicKeyFile(),
-                    FileSaveParameter.builder()
+            publicKeySaveResult = this.smartFileApi.save(
+                        RemoteFileSaveParameter.builder()
+                            .multipartFile(parameter.getPublicKeyFile())
                             .fileStorageId(parameter.getFileStorageId())
                             .type(secretFileType)
                             .build()
             );
-            privateKeySaveResult = this.fileService.save(
-                    parameter.getPrivateKeyFile(),
-                    FileSaveParameter.builder()
+            privateKeySaveResult = this.smartFileApi.save(
+                    RemoteFileSaveParameter.builder()
+                            .multipartFile(parameter.getPrivateKeyFile())
                             .fileStorageId(parameter.getFileStorageId())
                             .type(secretFileType)
                             .build()
@@ -132,15 +132,15 @@ public class SmartAuthSecretKeyServiceImpl extends BaseServiceImpl<SmartAuthSecr
             boolean saveResult = this.save(model);
             // 删除之前的文件，放到最后是因为防止保存失败，数据回蓝，而文件已经删除
             if (secretKey != null) {
-                this.fileService.batchDelete(ImmutableList.of(secretKey.getPrivateKeyFileId(), secretKey.getPublicKeyFileId()));
+                this.smartFileApi.batchDelete(List.of(secretKey.getPrivateKeyFileId(), secretKey.getPublicKeyFileId()));
             }
             return saveResult;
         } catch (Exception e) {
             if (publicKeySaveResult != null) {
-                this.fileService.delete(publicKeySaveResult.getFileId());
+                this.smartFileApi.delete(publicKeySaveResult.getFileId());
             }
             if (privateKeySaveResult != null) {
-                this.fileService.delete(privateKeySaveResult.getFileId());
+                this.smartFileApi.delete(privateKeySaveResult.getFileId());
             }
             throw new BaseException(e);
         }
@@ -159,12 +159,12 @@ public class SmartAuthSecretKeyServiceImpl extends BaseServiceImpl<SmartAuthSecr
             throw new BusinessException("获取秘钥信息失败，请检查ID是否正确");
         }
         // 获取文件
-        FileDownloadResult publicKey = this.fileService.download(secretKey.getPublicKeyFileId());
-        FileDownloadResult privateKey = this.fileService.download(secretKey.getPrivateKeyFileId());
+        FileDownloadResult publicKey = this.smartFileApi.download(secretKey.getPublicKeyFileId());
+        FileDownloadResult privateKey = this.smartFileApi.download(secretKey.getPrivateKeyFileId());
 
         ZipUtil.zip(
                 outputStream,
-                new String[]{publicKey.getFileName(), privateKey.getFileName()},
+                new String[]{publicKey.getFilename(), privateKey.getFilename()},
                 new InputStream[]{publicKey.getInputStream(), privateKey.getInputStream()}
         );
     }
